[package]
name = "magnus-precompiles"
description = "Tempo EVM precompile implementations for TIP-20 tokens, stablecoin DEX, fee manager, validator config, account keychain, and nonce management"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
magnus-contracts.workspace = true
magnus-chainspec.workspace = true
magnus-primitives.workspace = true
magnus-precompiles-macros.workspace = true
alloy = { workspace = true, features = ["sol-types", "consensus"] }
alloy-evm = { workspace = true, features = ["std"] }
revm.workspace = true

commonware-cryptography.workspace = true
commonware-codec.workspace = true

tracing.workspace = true
thiserror.workspace = true
derive_more.workspace = true
scoped-tls = "1.0"

[dev-dependencies]
criterion.workspace = true
alloy-signer.workspace = true
alloy-signer-local.workspace = true
alloy-primitives = { workspace = true, features = ["rand"] }
eyre.workspace = true
p256.workspace = true
rand_08.workspace = true
proptest.workspace = true
serde.workspace = true
serde_json.workspace = true
magnus-evm.workspace = true

[features]
default = ["rpc"]
test-utils = ["alloy/getrandom"]
rpc = ["magnus-contracts/rpc"]

[[test]]
name = "storage"
required-features = ["test-utils"]

[[bench]]
name = "magnus_precompiles"
harness = false
required-features = ["test-utils"]
