[package]
name = "magnus-revm"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
magnus-precompiles.workspace = true
magnus-primitives = { workspace = true, features = ["reth"] }
magnus-contracts.workspace = true
magnus-chainspec.workspace = true

reth-evm.workspace = true
reth-storage-api = { workspace = true, optional = true }
reth-rpc-eth-types = { workspace = true, optional = true }

revm.workspace = true

alloy-evm = { workspace = true, features = ["std"] }
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-sol-types.workspace = true

auto_impl.workspace = true
derive_more.workspace = true
tracing.workspace = true
thiserror.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
eyre.workspace = true
alloy-primitives = { workspace = true, features = ["rand"] }
alloy-eips.workspace = true
alloy-rlp.workspace = true
alloy-signer.workspace = true
alloy-signer-local.workspace = true
base64.workspace = true
p256.workspace = true
proptest.workspace = true
sha2.workspace = true
magnus-evm.workspace = true
magnus-precompiles = { workspace = true, features = ["test-utils"] }
test-case.workspace = true

[features]
reth = ["dep:reth-storage-api"]
rpc = ["dep:reth-rpc-eth-types"]
serde = [
	"dep:serde",
	"revm/serde",
	"alloy-consensus/serde",
	"alloy-eips/serde",
	"alloy-primitives/serde",
	"p256/serde",
	"reth-storage-api?/serde",
	"magnus-chainspec/serde",
	"magnus-contracts/serde",
	"magnus-primitives/serde"
]
