[package]
name = "magnus-evm"
description = "Magnus EVM implementation"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
magnus-chainspec.workspace = true
magnus-consensus.workspace = true
magnus-payload-types = { workspace = true, optional = true }
magnus-primitives.workspace = true
magnus-vm.workspace = true

magnus-cryptography.workspace = true
magnus-codec.workspace = true

reth-consensus.workspace = true
reth-chainspec.workspace = true
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
reth-revm.workspace = true
reth-primitives-traits.workspace = true
reth-rpc-eth-api = { workspace = true, optional = true }

rayon = { workspace = true, optional = true }
alloy-rlp.workspace = true
alloy-evm.workspace = true
alloy-consensus.workspace = true
alloy-primitives.workspace = true

derive_more.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
revm.workspace = true
reth-storage-api.workspace = true

[features]
default = ["rpc", "engine"]
rpc = ["dep:reth-rpc-eth-api", "magnus-vm/rpc", "magnus-primitives/serde", "magnus-primitives/reth-codec"]
engine = ["dep:magnus-payload-types", "dep:rayon"]
