[package]
name = "magnus-vm"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
magnus-precompile-registry.workspace = true
magnus-primitives.workspace = true
magnus-contracts.workspace = true
magnus-chainspec.workspace = true

reth-evm.workspace = true
reth-storage-api = { workspace = true, optional = true }
reth-rpc-eth-types = { workspace = true, optional = true }

revm.workspace = true

alloy-evm.workspace = true
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-sol-types.workspace = true

auto_impl.workspace = true
derive_more.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
eyre.workspace = true
alloy-primitives = { workspace = true, features = ["rand"] }
alloy-eips.workspace = true
alloy-rlp.workspace = true
base64.workspace = true
p256.workspace = true
sha2.workspace = true
magnus-evm.workspace = true
magnus-precompile-registry = { workspace = true, features = ["test-utils"] }

[features]
reth = ["dep:reth-storage-api"]
rpc = ["dep:reth-rpc-eth-types"]
