[package]
name = "magnus-config"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
magnus-codec.workspace = true
magnus-cryptography.workspace = true
const-hex.workspace = true
derive_more = { workspace = true, features = ["debug"] }
thiserror.workspace = true

[dev-dependencies]
magnus-utils.workspace = true
rand.workspace = true
