[package]
name = "magnus-executor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Block execution abstractions and REVM implementation for Magnus"

[dependencies]
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
futures.workspace = true
magnus-precompiles = { workspace = true }
magnus-qmdb = { path = "../../storage/qmdb" }
magnus-traits = { path = "../../storage/traits" }
revm.workspace = true
thiserror.workspace = true

[dev-dependencies]
rstest.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
