[package]
name = "magnus-ledger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Ledger services for Magnus nodes"

[lints]
workspace = true

[dependencies]
# Local crates
magnus-consensus = { path = "../consensus" }
magnus-domain = { path = "../domain" }
magnus-overlay = { path = "../../storage/overlay" }
magnus-qmdb-ledger = { path = "../../storage/qmdb-ledger" }
magnus-traits = { path = "../../storage/traits" }

# Commonware
commonware-cryptography.workspace = true
commonware-runtime.workspace = true

# Alloy
alloy-primitives.workspace = true

# Async
futures.workspace = true

# Error handling
thiserror.workspace = true

[dev-dependencies]
# Local crates
magnus-executor = { path = "../executor" }

# Commonware
commonware-runtime.workspace = true
commonware-utils.workspace = true

# Execution
alloy-evm = { workspace = true, features = ["std"] }
alloy-consensus.workspace = true

# Crypto
k256.workspace = true
