
[package]
name = "magnus-mempool"

version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
magnus-chainspec.workspace = true
magnus-primitives = { workspace = true, features = ["serde", "reth-codec"] }
magnus-vm = { workspace = true, features = ["reth"] }
magnus-precompile-registry.workspace = true

reth-transaction-pool.workspace = true
reth-evm.workspace = true
reth-chainspec.workspace = true
reth-primitives-traits.workspace = true
reth-storage-api.workspace = true
reth-provider.workspace = true
reth-eth-wire-types.workspace = true
reth-tracing.workspace = true
reth-metrics.workspace = true

revm.workspace = true

alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-eips.workspace = true
alloy-evm.workspace = true

futures.workspace = true
tracing.workspace = true
parking_lot.workspace = true
tokio = { workspace = true, features = ["sync"] }
thiserror.workspace = true
metrics.workspace = true

[dev-dependencies]
reth-transaction-pool = { workspace = true, features = ["test-utils"] }
reth-provider = { workspace = true, features = ["test-utils"] }
reth-ethereum-primitives.workspace = true
magnus-evm.workspace = true
alloy-eips.workspace = true
alloy-consensus.workspace = true
tokio.workspace = true
test-case.workspace = true
