[package]
name = "magnus-reporters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Consensus reporters for Magnus nodes"

[lints]
workspace = true

[dependencies]
# Local crates
magnus-consensus = { path = "../consensus" }
magnus-domain = { path = "../domain" }
magnus-executor = { path = "../executor" }
magnus-ledger = { path = "../ledger" }
magnus-overlay = { path = "../../storage/overlay" }
magnus-qmdb-ledger = { path = "../../storage/qmdb-ledger" }
magnus-rpc = { path = "../rpc" }

# Commonware
commonware-codec.workspace = true
commonware-consensus.workspace = true
commonware-cryptography.workspace = true
commonware-runtime.workspace = true
commonware-utils.workspace = true

# Alloy
alloy-primitives.workspace = true

# Tracing
tracing.workspace = true
