[package]
name = "magnus-runner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Production node runner for Magnus validators"

[dependencies]
magnus-config.workspace = true
magnus-consensus.workspace = true
magnus-domain.workspace = true
magnus-dkg.workspace = true
magnus-executor.workspace = true
magnus-ledger.workspace = true
magnus-marshal.workspace = true
magnus-overlay.workspace = true
magnus-qmdb-ledger.workspace = true
magnus-reporters.workspace = true
magnus-rpc.workspace = true
magnus-service.workspace = true
magnus-simplex.workspace = true
magnus-transport.workspace = true

commonware-codec.workspace = true
commonware-consensus.workspace = true
commonware-cryptography.workspace = true
commonware-p2p.workspace = true
commonware-parallel.workspace = true
commonware-runtime.workspace = true
commonware-utils.workspace = true

alloy-consensus = { workspace = true }
alloy-primitives.workspace = true

futures.workspace = true
tracing.workspace = true
anyhow.workspace = true
rand.workspace = true

[lints]
workspace = true
