[package]
name = "magnus-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Magnus node service orchestration"

[lints]
workspace = true

[dependencies]
# Local crates
magnus-config = { path = "../config" }
magnus-transport = { path = "../../network/transport" }

# Commonware
commonware-consensus.workspace = true
commonware-cryptography.workspace = true
commonware-p2p.workspace = true
commonware-runtime.workspace = true
commonware-utils.workspace = true

# Async
futures.workspace = true

# Tracing
tracing.workspace = true

# Error handling
eyre.workspace = true
thiserror.workspace = true
