[package]
name = "magnus-alloy"
description = "Tempo extensions of Alloy"

version = "1.6.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = true

[lints]
workspace = true

[dependencies]
magnus-contracts = { workspace = true, features = ["rpc"] }
magnus-primitives = { workspace = true, features = ["serde", "rpc"] }
magnus-chainspec = { workspace = true, default-features = false }
magnus-evm = { workspace = true, optional = true }
magnus-revm = { workspace = true, optional = true }

alloy-consensus.workspace = true
alloy-contract.workspace = true
alloy-eips.workspace = true
alloy-network.workspace = true
alloy-primitives = { workspace = true, features = ["rand"] }
alloy-provider.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-serde.workspace = true
alloy-signer-local.workspace = true
alloy-sol-types.workspace = true
alloy-transport.workspace = true

reth-evm = { workspace = true, optional = true }
reth-primitives-traits = { workspace = true, optional = true }
reth-rpc-convert = { workspace = true, optional = true }
reth-rpc-eth-types = { workspace = true, optional = true }

dashmap.workspace = true
derive_more.workspace = true
futures.workspace = true
async-trait.workspace = true
serde.workspace = true
tracing.workspace = true

[dev-dependencies]
alloy = { workspace = true, features = ["providers", "rpc-types-eth", "sol-types"] }
alloy-signer.workspace = true
eyre.workspace = true
serde_json.workspace = true
test-case.workspace = true
tokio.workspace = true

[features]
default = []
reth = [
    "dep:magnus-evm",
    "dep:magnus-revm",
    "dep:reth-evm",
    "dep:reth-primitives-traits",
    "dep:reth-rpc-convert",
    "dep:reth-rpc-eth-types",
    "magnus-primitives/reth",
    "magnus-chainspec/reth",
]
asm-keccak = [
    "alloy-primitives/asm-keccak",
    "alloy/asm-keccak",
]
