[package]
name = "magnus-backend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Commonware-storage based backend for Magnus QMDB"

[lints]
workspace = true

[dependencies]
magnus-qmdb = { path = "../qmdb" }
magnus-handlers = { path = "../handlers" }

alloy-primitives.workspace = true
async-trait = "0.1"
bytes.workspace = true
commonware-codec.workspace = true
commonware-cryptography.workspace = true
commonware-runtime.workspace = true
commonware-storage.workspace = true
commonware-utils.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
