[package]
name = "magnus-qmdb-ledger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "QMDB-backed ledger adapter for Magnus"

[lints]
workspace = true

[dependencies]
# Local crates
magnus-backend = { path = "../backend" }
magnus-handlers = { path = "../handlers" }
magnus-qmdb = { path = "../qmdb" }
magnus-traits = { path = "../traits" }
magnus-domain = { path = "../../node/domain" }

# Commonware
commonware-runtime.workspace = true

# Alloy
alloy-primitives.workspace = true

# Error handling
thiserror.workspace = true

# Async
tokio.workspace = true
